Remove bug on mobile when countryButton has different transition time when hovered (focused) over

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ footer a {
   text-decoration: none;
 }
 
-.country-buttons:hover, .new-game-button:hover {
+.new-game-button:hover {
   transform: translateY(-2px);
   transition: .3s;
 }
